# grup54

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  ROADMAP.md  conftest.py  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
ProjectManagement/: README.md
app/: globals.css  layout.tsx  page.tsx
design/: README.md  ensemble.pen
docs/: bagimlilik-harita-rehberi.md  eval-metodoloji-devir.md  gelistirme-dongusu.md  github-app-kurulum.md  issue-brifing-rehberi.md  kapsam-sinirlari.md  review-koku-testi-rehberi.md  review-rehberi.md  sprint-akis-raporu-rehberi.md  sprint2-bagimlilik.md  sprint2-kontratlar.md  sprint3-bagimlilik.md  sprint3-kontratlar.md  tema-raporu-rehberi.md
eval/: README.md  eval_runner.py  gate.py  kalibrasyon-raporu.md  sweep.py  (+4 more)
src/backend/: alembic.ini  pyproject.toml
src/backend/ensemble/: app.py  config.py  models.py  ports.py
src/backend/ensemble/api/: deps.py  errors.py  schemas.py
src/backend/ensemble/api/routers/: board.py  events.py  graph.py  health.py  query.py  radar.py  scope.py  webhook.py
src/backend/ensemble/engine/: __init__.py  board.py  chunking.py  embeddings.py  events.py  graph.py  projector.py  query.py  radar.py  scope.py  scope_context.py  scope_retrieval.py  vectorstore.py
src/backend/ensemble/integrations/: query_source.py
src/backend/ensemble/integrations/gemini/: client.py  embeddings.py  errors.py  fake.py  gate.py  judge.py  query_judge.py  scope_judge.py
src/backend/ensemble/integrations/github/: adapter.py  auth.py  client.py  errors.py  fake.py  normalize.py
src/backend/ensemble/integrations/ollama/: __init__.py  adapter.py  client.py  errors.py
src/backend/ensemble/onboarding/: scope_draft.py  wizard.py
src/backend/ensemble/store/: __init__.py  engine.py  models.py  rebuild.py  vector_store.py
src/backend/ensemble/store/migrations/: __init__.py  env.py  script.py.mako
src/backend/ensemble/store/migrations/versions/: b636480eb1c7_initial_tables.py  bfde4c8f644f_pgvector_extension.py  c4f1d6a2b8e9_vector_index_table.py
(+143 files in other folders)
