[project]
name = "ensemble-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "ensemble-shared",
    "google-genai>=1.0,<2.0",
    "tenacity>=8.2,<10",
    "pyjwt[crypto]>=2.8,<3",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ensemble"]
